--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vite-plugin-singlefile": "^2.2.0",
     "vite-plugin-solid": "^2.11.2"
   }
 }
