--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "linkify-element": "^4.2.0",
+    "linkifyjs": "^4.2.0",
     "solid-js": "^1.9.5"
   },
   "devDependencies": {
